@startuml

' Template file to use to create the diagrams od the packages.
' Every file must have a sub part called INTERNAL with the internal connections of the package and
' a sub part called EXTERNAL with the external parts.
skinparam linetype polyline
skinparam linetype ortho

!startsub INTERNAL

package src.engine.gui.frames.tools {
    class src.engine.gui.frames.tools.Tools
    class src.engine.gui.frames.tools.ReliefTools
    class src.engine.gui.frames.tools.PolygonTools
    class src.engine.gui.frames.tools.InterpolationTools
    class src.engine.gui.frames.tools.MapTools
}

src.engine.gui.frames.tools.Tools *-- src.engine.gui.frames.tools.ReliefTools
src.engine.gui.frames.tools.Tools *-- src.engine.gui.frames.tools.PolygonTools
src.engine.gui.frames.tools.Tools *-- src.engine.gui.frames.tools.InterpolationTools
src.engine.gui.frames.tools.Tools *-- src.engine.gui.frames.tools.MapTools
!endsub



!startsub EXTERNAL
    src.engine.gui.frames.tools.Tools -u--|> src.engine.gui.frames.Frame
    src.engine.gui.frames.tools.PolygonTools ..> src.program.Tools
    src.engine.gui.frames.tools.Tools ..> src.program.Tools

    src.engine.gui.frames.tools.ReliefTools ..> src.engine.scene.filter.Filter
    src.engine.gui.frames.tools.ReliefTools ..> src.engine.scene.filter.IsIn
    src.engine.gui.frames.tools.ReliefTools ..> src.engine.scene.filter.IsNotIn
    src.engine.gui.frames.tools.ReliefTools ..> src.engine.scene.filter.HeightLessThan
    src.engine.gui.frames.tools.ReliefTools ..> src.engine.scene.filter.HeightGreaterThan
    src.engine.gui.frames.tools.ReliefTools ..> src.engine.scene.transformation.LinearTransformation
    src.engine.gui.frames.tools.ReliefTools ..> src.engine.scene.transformation.FillNanTransformation

    src.engine.gui.frames.tools.InterpolationTools ..> src.engine.scene.interpolation.CubicInterpolation
    src.engine.gui.frames.tools.InterpolationTools ..> src.engine.scene.interpolation.NearestInterpolation
    src.engine.gui.frames.tools.InterpolationTools ..> src.engine.scene.interpolation.LinearInterpolation
    src.engine.gui.frames.tools.InterpolationTools ..> src.engine.scene.interpolation.SmoothInterpolation

    src.engine.gui.frames.tools.InterpolationTools ..> src.engine.gui.Font
    src.engine.gui.frames.tools.MapTools ..> src.engine.gui.Font
    src.engine.gui.frames.tools.PolygonTools ..> src.engine.gui.Font
    src.engine.gui.frames.tools.ReliefTools ..> src.engine.gui.Font
    src.engine.gui.frames.tools.Tools ..> src.engine.gui.Font

    src.engine.gui.frames.tools.PolygonTools ..> src.engine.gui.frames.modal.ConfirmationModal
!endsub

hide members

@enduml